Rework state machine
Switch state machine to pushdown automata
Add basic movement & camera follow
Add spring damped camera follow

--- a/NxGui/NxGui.csproj
+++ b/NxGui/NxGui.csproj
@@ -7,6 +7,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <OutputPath>..\bin\Debug\NxGui\</OutputPath>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <!-->PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
